# desktop-ini

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: README_zh.md
src/: encoding.rs  error.rs  ini.rs  interactive.rs  main.rs  platform.rs  run.rs  set.rs  setup.rs  sync.rs
